AirquipUAT/force-app/main/default/objects/Consolidated_Invoice_Job__c/Consolidated_Invoice_Job__c.object-meta.xml
<CustomObject>
    <description>Tracks each Job included in a consolidated Invoice.</description>
    <label>Consolidated Invoice Job</label>
    <nameField>
        <displayFormat>CIJ-{000000}</displayFormat>
        <label>Consolidated Invoice Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consolidated Invoice Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>