AirquipUAT/force-app/main/default/objects/Consolidated_Invoice_Job__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account related to this consolidated Invoice.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consolidated Invoice Jobs</relationshipLabel>
    <relationshipName>Consolidated_Invoice_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>