AirquipUAT/force-app/main/default/objects/Consolidated_Invoice_Job__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <description>Invoice that includes the selected Job.</description>
    <label>Invoice</label>
    <referenceTo>fax__Invoice__c</referenceTo>
    <relationshipLabel>Consolidated Invoice Jobs</relationshipLabel>
    <relationshipName>Consolidated_Invoice_Job_Relations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>