AirquipUAT/force-app/main/default/objects/Consolidated_Invoice_Job__c/fields/Invoice_Job_Key__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Job_Key__c</fullName>
    <description>Unique key used to prevent duplicate Invoice-to-Job relation records.</description>
    <externalId>true</externalId>
    <label>Invoice Job Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>