AirquipUAT/force-app/main/default/objects/Consolidated_Invoice_Job__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Job included in the consolidated Invoice.</description>
    <label>Job</label>
    <referenceTo>fax__Job__c</referenceTo>
    <relationshipLabel>Consolidated Invoice Job Relations</relationshipLabel>
    <relationshipName>Consolidated_Invoice_Job_Relations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>